fixing overlap

--- a/css/layout.css
+++ b/css/layout.css
@@ -91,7 +91,7 @@ body {
     /* Resume Cards */
 
     .resume-card {
-      max-width: 100%;
+      max-width: calc((100% - 32px) / 3);
       display: flex;
       flex-direction: column;
       gap: 34px;
@@ -107,7 +107,7 @@ body {
       width: 100%;
       height: 200px;
       object-fit: cover;
-      object-position: left;
+      object-position: center;
     }
 
 
